--- a/src/pages/AboutUsPage/HowWeGetThingsDone/HowWeGetThingsDoneResponsiveness.css
+++ b/src/pages/AboutUsPage/HowWeGetThingsDone/HowWeGetThingsDoneResponsiveness.css
@@ -75,7 +75,7 @@
 
 @media screen and (max-width: 1150px) {
     .howWeGetThingsDone {
-        padding: 4.5em 0em;
+        padding: 4em 0em;
     }
 
     .howWeGetThingsDoneContent {
