--- a/src/pages/HomePage/AboutUs/AboutUs.css
+++ b/src/pages/HomePage/AboutUs/AboutUs.css
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100%;
 
-    padding: 10em 0em;
+    padding: 5em 0em;
 
     background-color: var(--bg-color-90);
 }
