--- a/src/pages/HomePage/AboutUs/AboutUsResponsiveness.css
+++ b/src/pages/HomePage/AboutUs/AboutUsResponsiveness.css
@@ -1,8 +1,4 @@
 @media screen and (max-width: 1450px) {
-    .aboutUs {
-        padding: 8em 0em;
-    }
-
     .aboutUs .aboutUsContent {
         width: 1050px;
     }
@@ -30,7 +26,7 @@
 
 @media screen and (max-width: 1150px) {
     .aboutUs {
-        padding: 6em 0em;
+        padding: 4em 0em;
     }
 
     .aboutUs .aboutUsContent {
@@ -70,7 +66,7 @@
 
 @media screen and (max-width: 900px) {
     .aboutUs {
-        padding: 4em 0em;
+        padding: 3em 0em;
     }
 
     .aboutUs .aboutUsContent {
