--- a/src/pages/HomePage/Solomon/Solomon.css
+++ b/src/pages/HomePage/Solomon/Solomon.css
@@ -17,7 +17,7 @@
     height: 825px;
     width: 1265px;
 
-    margin-top: 10em;
+    margin-top: 12em;
     padding: 5em 0em;
 
     border-radius: 2em;
