--- a/src/pages/SolomonPage/DataSafety/DataSafetyResponsiveness.css
+++ b/src/pages/SolomonPage/DataSafety/DataSafetyResponsiveness.css
@@ -1,8 +1,4 @@
 @media screen and (max-width: 1450px) {
-    .dataSafety {
-        padding: 6em 0em;
-    }
-
     .dataSafety .content {
         width: 1050px;
     }
@@ -14,7 +10,7 @@
 
 @media screen and (max-width: 1150px) {
     .dataSafety {
-        padding: 5em 0em;
+        padding: 4em 0em;
     }
 
     .dataSafety .content {
@@ -43,6 +39,10 @@
 }
 
 @media screen and (max-width: 900px) {
+    .dataSafety {
+        padding: 3em 0em;
+    }
+
     .dataSafety .content {
         width: 700px;
     }
